--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@openzeppelin/contracts": "5.0.1",
     "@prb/math": "^4.0.2",
     "@rhinestone/modulekit": "github:rhinestonewtf/modulekit#dev",
-    "@rhinestone/safe7579": "github:rhinestonewtf/modulekit#dev",
-    "@rhinestone/sessionkeymanager": "github:rhinestonewtf/modulekit#dev",
+    "@rhinestone/safe7579": "github:rhinestonewtf/safe7579",
     "@safe-global/safe-contracts": "^1.4.1",
     "checknsignatures": "github:zeroknots/checknsignatures",
     "ds-test": "github:dapphub/ds-test",
