--- a/package.json
+++ b/package.json
@@ -1,55 +1,12 @@
 {
-  "name": "@rhinestone/modulekit-examples",
-  "description": "ModuleKit Examples",
-  "license": "MIT",
+  "name": "@rhinestone/core-modules",
   "version": "1.0.0",
+  "description": "ModuleKit Examples",
+  "license": "GPL-3.0",
   "author": {
     "name": "Rhinestone",
     "url": "https://rhinestone.wtf"
   },
-  "bugs": {
-    "url": "https://github.com/rhinestonewtf/modulekit/issues"
-  },
-  "dependencies": {
-    "@ERC4337/account-abstraction": "github:kopy-kat/account-abstraction#develop",
-    "@ERC4337/account-abstraction-v0.6": "github:eth-infinitism/account-abstraction#v0.6.0",
-    "@openzeppelin/contracts": "5.0.1",
-    "@prb/math": "^4.0.2",
-    "@rhinestone/modulekit": "github:rhinestonewtf/modulekit#dev",
-    "@rhinestone/safe7579": "github:rhinestonewtf/safe7579",
-    "@safe-global/safe-contracts": "^1.4.1",
-    "checknsignatures": "github:zeroknots/checknsignatures",
-    "ds-test": "github:dapphub/ds-test",
-    "erc4337-validation": "github:rhinestonewtf/erc4337-validation",
-    "erc7579": "github:erc7579/erc7579-implementation",
-    "forge-std": "github:foundry-rs/forge-std",
-    "prettier": "^2.8.8",
-    "sentinellist": "github:rhinestonewtf/sentinellist",
-    "solady": "github:vectorized/solady",
-    "solarray": "github:sablier-labs/solarray",
-    "solhint": "^4.5.4",
-    "solmate": "github:transmissions11/solmate",
-    "associatedBytesLib": "github:rhinestonewtf/associatedBytesLib"
-  },
-  "files": [
-    "artifacts",
-    "src",
-    "test/utils",
-    "CHANGELOG.md",
-    "LICENSE-GPL.md"
-  ],
-  "keywords": [
-    "blockchain",
-    "ethereum",
-    "foundry",
-    "smart-contracts",
-    "solidity",
-    "web3"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": "github.com/rhinestonewtf/modulekit",
   "scripts": {
     "fmt": "forge fmt",
     "build": "forge build",
@@ -67,5 +24,43 @@
     "test": "forge test",
     "test:lite": "FOUNDRY_PROFILE=lite forge test",
     "test:optimized": "pnpm run build:optimized && FOUNDRY_PROFILE=test-optimized forge test"
+  },
+  "dependencies": {
+    "@rhinestone/modulekit": "github:rhinestonewtf/modulekit#dev",
+    "@rhinestone/safe7579": "github:rhinestonewtf/safe7579",
+    "@rhinestone/erc4337-validation": "github:rhinestonewtf/erc4337-validation",
+    "@rhinestone/sentinellist": "github:rhinestonewtf/sentinellist",
+    "@rhinestone/associatedBytesLib": "github:rhinestonewtf/associatedBytesLib",
+    "@rhinestone/checknsignatures": "github:zeroknots/checknsignatures",
+    "@ERC4337/account-abstraction": "github:kopy-kat/account-abstraction#develop",
+    "@ERC4337/account-abstraction-v0.6": "github:eth-infinitism/account-abstraction#v0.6.0",
+    "@openzeppelin/contracts": "5.0.1",
+    "@prb/math": "^4.0.2",
+    "@safe-global/safe-contracts": "^1.4.1",
+    "ds-test": "github:dapphub/ds-test",
+    "erc7579": "github:erc7579/erc7579-implementation",
+    "forge-std": "github:foundry-rs/forge-std",
+    "prettier": "^2.8.8",
+    "solady": "github:vectorized/solady",
+    "solarray": "github:sablier-labs/solarray",
+    "solhint": "^4.5.4",
+    "solmate": "github:transmissions11/solmate"
+  },
+  "files": [
+    "src",
+    "foundry.toml"
+  ],
+  "homepage": "https://docs.rhinestone.wtf",
+  "repository": "github:rhinestonewtf/core-modules",
+  "bugs": {
+    "url": "https://github.com/rhinestonewtf/core-modules/issues"
+  },
+  "keywords": [
+    "account abstraction",
+    "smart account modules",
+    "core modules"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
