--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,8 +10,12 @@ jobs:
     uses: "rhinestonewtf/reusable-workflows/.github/workflows/forge-test.yaml@main"
     with:
       match-path: "test/**/*.sol"
+    secrets:
+      MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
 
   simulate-core-modules:
     uses: "rhinestonewtf/reusable-workflows/.github/workflows/forge-test-simulate.yaml@main"
     with:
       match-path: "test/**/*.sol"
+    secrets:
+      MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
