--- a/package.json
+++ b/package.json
@@ -27,28 +27,13 @@
   },
   "dependencies": {
     "@rhinestone/modulekit": "github:rhinestonewtf/modulekit#dev",
-    "@rhinestone/safe7579": "github:rhinestonewtf/safe7579",
-    "@rhinestone/erc4337-validation": "github:rhinestonewtf/erc4337-validation",
-    "@rhinestone/sentinellist": "github:rhinestonewtf/sentinellist",
     "@rhinestone/associatedBytesLib": "github:rhinestonewtf/associatedBytesLib",
-    "@rhinestone/checknsignatures": "github:rhinestonewtf/checknsignatures",
-    "@ERC4337/account-abstraction": "github:kopy-kat/account-abstraction#develop",
-    "@ERC4337/account-abstraction-v0.6": "github:eth-infinitism/account-abstraction#v0.6.0",
-    "@openzeppelin/contracts": "5.0.1",
-    "@prb/math": "^4.0.2",
-    "@safe-global/safe-contracts": "^1.4.1",
-    "ds-test": "github:dapphub/ds-test",
-    "erc7579": "github:erc7579/erc7579-implementation",
-    "forge-std": "github:foundry-rs/forge-std",
-    "prettier": "^2.8.8",
-    "solady": "github:vectorized/solady",
-    "solarray": "github:sablier-labs/solarray",
-    "solhint": "^4.5.4",
-    "solmate": "github:transmissions11/solmate"
+    "@rhinestone/checknsignatures": "github:rhinestonewtf/checknsignatures"
   },
   "files": [
     "src",
-    "foundry.toml"
+    "foundry.toml",
+    "remappings.txt"
   ],
   "homepage": "https://docs.rhinestone.wtf",
   "repository": "github:rhinestonewtf/core-modules",
