--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@rhinestone/associatedBytesLib": "github:rhinestonewtf/associatedBytesLib",
     "@rhinestone/checknsignatures": "github:rhinestonewtf/checknsignatures",
-    "@rhinestone/modulekit": "github:rhinestonewtf/modulekit#dev",
+    "@rhinestone/modulekit": "^0.4.0",
     "solmate": "github:transmissions11/solmate"
   },
   "files": [
@@ -39,7 +39,7 @@
   "homepage": "https://docs.rhinestone.wtf",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rhinestonewtf/core-modules.git"
+    "url": "git+https://github.com/rhinestonewtf/core-modules.git"
   },
   "bugs": {
     "url": "https://github.com/rhinestonewtf/core-modules/issues"
