--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@rhinestone/flatbytes": "github:rhinestonewtf/flatbytes",
     "@rhinestone/checknsignatures": "github:rhinestonewtf/checknsignatures",
-    "@rhinestone/modulekit": "github:rhinestonewtf/modulekit#feature/kernel-hook-support",
+    "@rhinestone/modulekit": "^0.4.6",
     "solmate": "github:transmissions11/solmate"
   },
   "files": [
