--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,7 @@ src = "src"
 out = "out"
 script = "script"
 libs = ["node_modules"]
-fs_permissions = [{ access = "read", path = "out-optimized" }, { access = "read-write", path = "gas_calculations" }]
+fs_permissions = [{ access = "read", path = "out-optimized" }, { access = "read-write", path = "deployments" }, { access = "read-write", path = "gas_calculations" }]
 allow_paths = ["*", "/"]
 
 [rpc_endpoints]
