--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@rhinestone/flatbytes": "github:rhinestonewtf/flatbytes",
     "@rhinestone/checknsignatures": "github:rhinestonewtf/checknsignatures",
     "@rhinestone/modulekit": "^0.4.6",
+    "ds-test": "github:dapphub/ds-test#e282159d5170298eb2455a6c05280ab5a73a4ef0",
+    "forge-std": "github:foundry-rs/forge-std#v1.7.6",
     "solmate": "github:transmissions11/solmate"
   },
   "files": [
