--- a/foundry.toml
+++ b/foundry.toml
@@ -31,27 +31,29 @@ scroll = {key = "${API_KEY_SCROLLSCAN}", chain="scroll"}
 
 
 [rpc_endpoints]
-arbitrum = "https://arb-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
-arbitrum-sepolia = "https://arb-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
-avalanche = "https://avax-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
-avalanche-fuji = "https://avax-fuji.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+arbitrum = "https://arbitrum-mainnet.infura.io/v3/${API_KEY_INFURA}"
+avalanche = "https://avalanche-mainnet.infura.io/v3/${API_KEY_INFURA}"
+avalanche-fuji = "https://avalanche-fuji-c-chain-rpc.publicnode.com"
 goerli = "https://goerli.infura.io/v3/${API_KEY_INFURA}"
 localhost = "http://localhost:8545"
 mainnet = "https://eth-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 optimism = "https://optimism-mainnet.infura.io/v3/${API_KEY_INFURA}"
 optimism-sepolia = "https://sepolia.optimism.io "
-polygon = "https://polygon-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
-polygon-amoy = "https://polygon-amoy.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
-sepolia = "https://eth-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+polygon = "https://polygon-mainnet.infura.io/v3/${API_KEY_INFURA}"
+polygon-amoy = "https://polygon-amoy.drpc.org"
+sepolia = "https://sepolia.infura.io/v3/${API_KEY_INFURA}"
 gnosis = "https://gnosis-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
-gnosis-chidao = "https://gnosis-chiado.g.alchemy.com/v2/${API_KEY_ALCHEMY"
+gnosis-chidao = "https://gnosis-chiado.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 bsc-testnet = "https://bnb-testnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 bsc = "https://bnb-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 base = "https://base-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 base-sepolia = "https://base-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 scroll-testnet = "https://rpc.ankr.com/scroll_sepolia_testnet"
 scroll = "https://scroll-mainnet.public.blastapi.io"
-celo = "https://forno.celo.org"
+fuse = "https://explorer-node.fuse.io"
+fuse-spark = "https://rpc.fusespark.io/"
+celo = "https://celo.drpc.org"
+celo-alfajores = "https://alfajores-forno.celo-testnet.org"
 
 [fmt]
 bracket_spacing = true
