--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rhinestone/checknsignatures": "github:rhinestonewtf/checknsignatures",
     "@rhinestone/flatbytes": "github:rhinestonewtf/flatbytes",
     "@rhinestone/modulekit": "^0.4.9",
+    "@rhinestone/module-bases": "github:rhinestonewtf/module-bases#fix/remediations",
     "ds-test": "github:dapphub/ds-test#e282159d5170298eb2455a6c05280ab5a73a4ef0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.2",
     "solmate": "github:transmissions11/solmate"
