--- a/foundry.toml
+++ b/foundry.toml
@@ -10,7 +10,30 @@ fs_permissions = [{ access = "read", path = "out-optimized" }, { access = "read-
 allow_paths = ["*", "/"]
 
 [rpc_endpoints]
-mainnet = "${MAINNET_RPC_URL}" 
+arbitrum = "https://arb-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+arbitrum-sepolia = "https://arb-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+avalanche = "https://avax-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+avalanche-fuji = "https://avax-fuji.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+goerli = "https://goerli.infura.io/v3/${API_KEY_INFURA}"
+localhost = "http://localhost:8545"
+mainnet = "https://eth-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+optimism = "https://optimism-mainnet.infura.io/v3/${API_KEY_INFURA}"
+optimism-sepolia = "https://sepolia.optimism.io "
+polygon = "https://polygon-mainnet.infura.io/v3/${API_KEY_INFURA}"
+polygon-amoy = "https://polygon-amoy.drpc.org"
+sepolia = "https://sepolia.infura.io/v3/${API_KEY_INFURA}"
+gnosis = "https://gnosis-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+gnosis-chidao = "https://gnosis-chiado.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+bsc-testnet = "https://bnb-testnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+bsc = "https://bnb-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+base = "https://base-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+base-sepolia = "https://base-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+scroll-testnet = "https://scroll-sepolia.drpc.org"
+scroll = "https://scroll-mainnet.public.blastapi.io"
+fuse = "https://explorer-node.fuse.io"
+fuse-spark = "https://rpc.fusespark.io/"
+celo = "https://celo.drpc.org"
+celo-alfajores = "https://alfajores-forno.celo-testnet.org"
 
 [fmt]
 bracket_spacing = true
