--- a/foundry.toml
+++ b/foundry.toml
@@ -32,7 +32,7 @@ scroll = {key = "${API_KEY_SCROLLSCAN}", chain="scroll"}
 
 [rpc_endpoints]
 arbitrum = "https://arb-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
-arbitrum-sepolia = "https://arb-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
+arbitrum-sepolia = "https://arb-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 avalanche = "https://avax-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 avalanche-fuji = "https://avax-fuji.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 goerli = "https://goerli.infura.io/v3/${API_KEY_INFURA}"
@@ -52,6 +52,8 @@ base-sepolia = "https://base-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 scroll-testnet = "https://rpc.ankr.com/scroll_sepolia_testnet"
 scroll = "https://scroll-mainnet.public.blastapi.io"
 celo = "https://forno.celo.org"
+fuse = "https://explorer-node.fuse.io"
+fuse-testnet= "https://rpc.fusespark.io/"
 
 [fmt]
 bracket_spacing = true
