moving package.json dependency of module-bases to main

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@rhinestone/checknsignatures": "github:rhinestonewtf/checknsignatures",
     "@rhinestone/flatbytes": "github:rhinestonewtf/flatbytes",
-    "@rhinestone/module-bases": "github:rhinestonewtf/module-bases#fix/remediations",
+    "@rhinestone/module-bases": "github:rhinestonewtf/module-bases",
     "@rhinestone/modulekit": "github:rhinestonewtf/modulekit#main",
     "ds-test": "github:dapphub/ds-test#e282159d5170298eb2455a6c05280ab5a73a4ef0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.2",
