--- a/foundry.toml
+++ b/foundry.toml
@@ -12,13 +12,14 @@ allow_paths = ["*", "/"]
 
 
 [rpc_endpoints]
+mainnet = "${MAINNET_RPC_URL}" 
+testnet = "${TESTNET_RPC_URL}" 
 arbitrum = "https://arb-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 arbitrum-sepolia = "https://arb-sepolia.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 avalanche = "https://avax-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 avalanche-fuji = "https://avax-fuji.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 goerli = "https://goerli.infura.io/v3/${API_KEY_INFURA}"
 localhost = "http://localhost:8545"
-mainnet = "https://eth-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
 optimism = "https://optimism-mainnet.infura.io/v3/${API_KEY_INFURA}"
 optimism-sepolia = "https://sepolia.optimism.io "
 polygon = "https://polygon-mainnet.g.alchemy.com/v2/${API_KEY_ALCHEMY}"
