--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   "dependencies": {
     "@rhinestone/checknsignatures": "github:rhinestonewtf/checknsignatures",
     "@rhinestone/flatbytes": "github:rhinestonewtf/flatbytes",
-    "@rhinestone/module-bases": "github:rhinestonewtf/module-bases#dd88e0a4e5673dd4676de2067c2e524cd8573523",
-    "@rhinestone/modulekit": "github:rhinestonewtf/modulekit#v0.4.9",
-    "erc7579": "github:erc7579/erc7579-implementation#827e2e0bd009eb85e96a1f75483dc467791de62b",
+    "@rhinestone/module-bases": "github:rhinestonewtf/module-bases#a85e120eadb3c6a0c3934f94dd013de7f67f088b",
+    "@rhinestone/modulekit": "github:rhinestonewtf/modulekit#423de5412407bc73a25644fa20927755d0fc68c4",
+    "erc7579": "github:erc7579/erc7579-implementation#c47765c69e415184250df3d118ec5e89f4e44fee",
     "ds-test": "github:dapphub/ds-test#e282159d5170298eb2455a6c05280ab5a73a4ef0",
-    "forge-std": "github:foundry-rs/forge-std#v1.9.2",
+    "forge-std": "github:foundry-rs/forge-std",
     "solmate": "github:transmissions11/solmate"
   },
   "files": [
