--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "forge-std": "github:foundry-rs/forge-std",
     "solmate": "github:transmissions11/solmate"
   },
+  "devDependencies": {
+    "solhint": "^5.0.3"
+  },
   "files": [
     "src",
     "attestations",
