--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@rhinestone/modulekit": "^0.5.1",
     "ds-test": "github:dapphub/ds-test#e282159d5170298eb2455a6c05280ab5a73a4ef0",
     "forge-std": "github:foundry-rs/forge-std",
-    "solmate": "github:transmissions11/solmate"
+    "solmate": "github:transmissions11/solmate",
+    "webauthn-sol": "github:base/webauthn-sol"
   },
   "files": [
     "src",
