--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   },
   "dependencies": {
     "@erc7579/enumerablemap4337": "github:erc7579/enumerablemap",
+    "@openzeppelin/contracts": "^5.3.0",
     "@rhinestone/checknsignatures": "github:rhinestonewtf/checknsignatures",
     "@rhinestone/flatbytes": "github:rhinestonewtf/flatbytes",
     "@rhinestone/modulekit": "^0.5.1",
+    "FreshCryptoLib": "github:rdubois-crypto/FreshCryptoLib",
     "ds-test": "github:dapphub/ds-test#e282159d5170298eb2455a6c05280ab5a73a4ef0",
     "forge-std": "github:foundry-rs/forge-std",
     "solmate": "github:transmissions11/solmate",
