--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,21 +40,14 @@ jobs:
     uses: "rhinestonewtf/reusable-workflows/.github/workflows/forge-release.yaml@main"
     strategy:
       matrix:
-        contract-name:
+        contract-path:
           [
-            "AutoSavings",
-            "ColdStorageFlashloan",
-            "ColdStorageHook",
-            "DeadmanSwitch",
-            "HookMultiPlexer",
-            "MultiFactor",
-            "OwnableExecutor",
-            "OwnableValidator",
-            "RegistryHook",
-            "SocialRecovery",
-            "ScheduledOrders",
-            "ScheduledTransfers",
+            "src/MultiFactor/MultiFactor",
+            "src/OwnableExecutor/OwnableExecutor",
+            "src/OwnableValidator/OwnableValidator",
+            "src/SocialRecovery/SocialRecovery",
+            "src/WebAuthnValidator/WebAuthnValidator",
           ]
     with:
-      contract-name: ${{ matrix.contract-name }}
+      contract-path: ${{ matrix.contract-path }}
       store-artifacts: true
